--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "4.13.4",
+    "http": "0.0.0",
+    "redis": "^2.6.2",
     "socket.io": "1.4.6"
   }
 }
