--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "4.13.4",
     "http": "0.0.0",
     "redis": "^2.6.2",
-    "socket.io": "1.4.6"
+    "socket.io": "1.4.6",
+    "socket.io-client": "^1.4.8"
   }
 }
